tests/snapshots/render/iterm2@commonmark-spec-019-backslash_escapes.snap
---
source: tests/render.rs
assertion_line: 116
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/019-backslash_escapes.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m\[\]                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
