tests/snapshots/render/iterm2@commonmark-spec-024-backslash_escapes.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/024-backslash_escapes.md
snapshot_kind: text
---
[32m╭── foo+bar ───────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mfoo[0m                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
